; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_i2c-multi-instantiate.c_i2c_multi_inst_count_resources.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_i2c-multi-instantiate.c_i2c_multi_inst_count_resources.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_device = type { i32 }

@r = common dso_local global i32 0, align 4
@i2c_multi_inst_count = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.acpi_device*)* @i2c_multi_inst_count_resources to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_multi_inst_count_resources(%struct.acpi_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.acpi_device* %0, %struct.acpi_device** %3, align 8
  %6 = load i32, i32* @r, align 4
  %7 = call i32 @LIST_HEAD(i32 %6)
  store i32 0, i32* %4, align 4
  %8 = load %struct.acpi_device*, %struct.acpi_device** %3, align 8
  %9 = load i32, i32* @i2c_multi_inst_count, align 4
  %10 = call i32 @acpi_dev_get_resources(%struct.acpi_device* %8, i32* @r, i32 %9, i32* %4)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %5, align 4
  store i32 %14, i32* %2, align 4
  br label %18

15:                                               ; preds = %1
  %16 = call i32 @acpi_dev_free_resource_list(i32* @r)
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %15, %13
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @LIST_HEAD(i32) #1

declare dso_local i32 @acpi_dev_get_resources(%struct.acpi_device*, i32*, i32, i32*) #1

declare dso_local i32 @acpi_dev_free_resource_list(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
